# libswiftnav-release

./: 0001-Added-install-rule-for-package.xml.patch  0002-Avoid-using-architecture-specific-optimizations-in-t.patch  0003-Avoid-building-docs-and-tests.patch  0004-Disable-errors-for-unknown-flags.patch  0004-Disable-warnings-as-errors.patch  0004-Downgrade-CMake-version-requirement-to-match-ROS-Hyd.patch  0005-Manually-add-fPIC-for-CMake-2.8.9.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
indigo/: package.xml
rpm/: ros-indigo-swiftnav.spec  template.spec
